include/codata_constants_2018.h

ADD_IMPORT extern const double MUON_MASS_ENERGY_EQUIVALENT;/**< J */
ADD_IMPORT extern const double U_MUON_MASS_ENERGY_EQUIVALENT;/**< J */
ADD_IMPORT extern const double MUON_MASS_ENERGY_EQUIVALENT_IN_MEV;/**< MeV */
ADD_IMPORT extern const double U_MUON_MASS_ENERGY_EQUIVALENT_IN_MEV;/**< MeV */
ADD_IMPORT extern const double MUON_MASS_IN_U;/**< u */
ADD_IMPORT extern const double U_MUON_MASS_IN_U;/**< u */
ADD_IMPORT extern const double MUON_MOLAR_MASS;/**< kg mol^-1 */
ADD_IMPORT extern const double U_MUON_MOLAR_MASS;/**< kg mol^-1 */
ADD_IMPORT extern const double MUON_NEUTRON_MASS_RATIO;/**<  */
ADD_IMPORT extern const double U_MUON_NEUTRON_MASS_RATIO;/**<  */
ADD_IMPORT extern const double MUON_PROTON_MAG__MOM__RATIO;/**<  */
ADD_IMPORT extern const double U_MUON_PROTON_MAG__MOM__RATIO;/**<  */
ADD_IMPORT extern const double MUON_PROTON_MASS_RATIO;/**<  */
ADD_IMPORT extern const double U_MUON_PROTON_MASS_RATIO;/**<  */
ADD_IMPORT extern const double MUON_TAU_MASS_RATIO;/**<  */
ADD_IMPORT extern const double U_MUON_TAU_MASS_RATIO;/**<  */
ADD_IMPORT extern const double NATURAL_UNIT_OF_ACTION;/**< J s */
ADD_IMPORT extern const double U_NATURAL_UNIT_OF_ACTION;/**< J s */
ADD_IMPORT extern const double NATURAL_UNIT_OF_ACTION_IN_EV_S;/**< eV s */
ADD_IMPORT extern const double U_NATURAL_UNIT_OF_ACTION_IN_EV_S;/**< eV s */
ADD_IMPORT extern const double NATURAL_UNIT_OF_ENERGY;/**< J */
ADD_IMPORT extern const double U_NATURAL_UNIT_OF_ENERGY;/**< J */
ADD_IMPORT extern const double NATURAL_UNIT_OF_ENERGY_IN_MEV;/**< MeV */
ADD_IMPORT extern const double U_NATURAL_UNIT_OF_ENERGY_IN_MEV;/**< MeV */
ADD_IMPORT extern const double NATURAL_UNIT_OF_LENGTH;/**< m */
ADD_IMPORT extern const double U_NATURAL_UNIT_OF_LENGTH;/**< m */
ADD_IMPORT extern const double NATURAL_UNIT_OF_MASS;/**< kg */
ADD_IMPORT extern const double U_NATURAL_UNIT_OF_MASS;/**< kg */
ADD_IMPORT extern const double NATURAL_UNIT_OF_MOMENTUM;/**< kg m s^-1 */
ADD_IMPORT extern const double U_NATURAL_UNIT_OF_MOMENTUM;/**< kg m s^-1 */
ADD_IMPORT extern const double NATURAL_UNIT_OF_MOMENTUM_IN_MEV_C;/**< MeV/c */
ADD_IMPORT extern const double U_NATURAL_UNIT_OF_MOMENTUM_IN_MEV_C;/**< MeV/c */
ADD_IMPORT extern const double NATURAL_UNIT_OF_TIME;/**< s */
ADD_IMPORT extern const double U_NATURAL_UNIT_OF_TIME;/**< s */
ADD_IMPORT extern const double NATURAL_UNIT_OF_VELOCITY;/**< m s^-1 */
ADD_IMPORT extern const double U_NATURAL_UNIT_OF_VELOCITY;/**< m s^-1 */
ADD_IMPORT extern const double NEUTRON_COMPTON_WAVELENGTH;/**< m */
ADD_IMPORT extern const double U_NEUTRON_COMPTON_WAVELENGTH;/**< m */
ADD_IMPORT extern const double NEUTRON_ELECTRON_MAG__MOM__RATIO;/**<  */
ADD_IMPORT extern const double U_NEUTRON_ELECTRON_MAG__MOM__RATIO;/**<  */
ADD_IMPORT extern const double NEUTRON_ELECTRON_MASS_RATIO;/**<  */
ADD_IMPORT extern const double U_NEUTRON_ELECTRON_MASS_RATIO;/**<  */
ADD_IMPORT extern const double NEUTRON_G_FACTOR;/**<  */
ADD_IMPORT extern const double U_NEUTRON_G_FACTOR;/**<  */
ADD_IMPORT extern const double NEUTRON_GYROMAG__RATIO;/**< s^-1 T^-1 */
ADD_IMPORT extern const double U_NEUTRON_GYROMAG__RATIO;/**< s^-1 T^-1 */
ADD_IMPORT extern const double NEUTRON_GYROMAG__RATIO_IN_MHZ_T;/**< MHz T^-1 */
ADD_IMPORT extern const double U_NEUTRON_GYROMAG__RATIO_IN_MHZ_T;/**< MHz T^-1 */
ADD_IMPORT extern const double NEUTRON_MAG__MOM;/**< J T^-1 */
ADD_IMPORT extern const double U_NEUTRON_MAG__MOM;/**< J T^-1 */
ADD_IMPORT extern const double NEUTRON_MAG__MOM__TO_BOHR_MAGNETON_RATIO;/**<  */
ADD_IMPORT extern const double U_NEUTRON_MAG__MOM__TO_BOHR_MAGNETON_RATIO;/**<  */
ADD_IMPORT extern const double NEUTRON_MAG__MOM__TO_NUCLEAR_MAGNETON_RATIO;/**<  */
ADD_IMPORT extern const double U_NEUTRON_MAG__MOM__TO_NUCLEAR_MAGNETON_RATIO;/**<  */
ADD_IMPORT extern const double NEUTRON_MASS;/**< kg */
ADD_IMPORT extern const double U_NEUTRON_MASS;/**< kg */
ADD_IMPORT extern const double NEUTRON_MASS_ENERGY_EQUIVALENT;/**< J */
ADD_IMPORT extern const double U_NEUTRON_MASS_ENERGY_EQUIVALENT;/**< J */
ADD_IMPORT extern const double NEUTRON_MASS_ENERGY_EQUIVALENT_IN_MEV;/**< MeV */
ADD_IMPORT extern const double U_NEUTRON_MASS_ENERGY_EQUIVALENT_IN_MEV;/**< MeV */
ADD_IMPORT extern const double NEUTRON_MASS_IN_U;/**< u */
ADD_IMPORT extern const double U_NEUTRON_MASS_IN_U;/**< u */
ADD_IMPORT extern const double NEUTRON_MOLAR_MASS;/**< kg mol^-1 */
ADD_IMPORT extern const double U_NEUTRON_MOLAR_MASS;/**< kg mol^-1 */
ADD_IMPORT extern const double NEUTRON_MUON_MASS_RATIO;/**<  */
ADD_IMPORT extern const double U_NEUTRON_MUON_MASS_RATIO;/**<  */
ADD_IMPORT extern const double NEUTRON_PROTON_MAG__MOM__RATIO;/**<  */
ADD_IMPORT extern const double U_NEUTRON_PROTON_MAG__MOM__RATIO;/**<  */
ADD_IMPORT extern const double NEUTRON_PROTON_MASS_DIFFERENCE;/**< kg */
ADD_IMPORT extern const double U_NEUTRON_PROTON_MASS_DIFFERENCE;/**< kg */
ADD_IMPORT extern const double NEUTRON_PROTON_MASS_DIFFERENCE_ENERGY_EQUIVALENT;/**< J */
ADD_IMPORT extern const double U_NEUTRON_PROTON_MASS_DIFFERENCE_ENERGY_EQUIVALENT;/**< J */
ADD_IMPORT extern const double NEUTRON_PROTON_MASS_DIFFERENCE_ENERGY_EQUIVALENT_IN_MEV;/**< MeV */
ADD_IMPORT extern const double U_NEUTRON_PROTON_MASS_DIFFERENCE_ENERGY_EQUIVALENT_IN_MEV;/**< MeV */
ADD_IMPORT extern const double NEUTRON_PROTON_MASS_DIFFERENCE_IN_U;/**< u */
ADD_IMPORT extern const double U_NEUTRON_PROTON_MASS_DIFFERENCE_IN_U;/**< u */
ADD_IMPORT extern const double NEUTRON_PROTON_MASS_RATIO;/**<  */
ADD_IMPORT extern const double U_NEUTRON_PROTON_MASS_RATIO;/**<  */
ADD_IMPORT extern const double NEUTRON_RELATIVE_ATOMIC_MASS;/**<  */
ADD_IMPORT extern const double U_NEUTRON_RELATIVE_ATOMIC_MASS;/**<  */
ADD_IMPORT extern const double NEUTRON_TAU_MASS_RATIO;/**<  */
ADD_IMPORT extern const double U_NEUTRON_TAU_MASS_RATIO;/**<  */
ADD_IMPORT extern const double NEUTRON_TO_SHIELDED_PROTON_MAG__MOM__RATIO;/**<  */
ADD_IMPORT extern const double U_NEUTRON_TO_SHIELDED_PROTON_MAG__MOM__RATIO;/**<  */
ADD_IMPORT extern const double NEWTONIAN_CONSTANT_OF_GRAVITATION;/**< m^3 kg^-1 s^-2 */
ADD_IMPORT extern const double U_NEWTONIAN_CONSTANT_OF_GRAVITATION;/**< m^3 kg^-1 s^-2 */
ADD_IMPORT extern const double NEWTONIAN_CONSTANT_OF_GRAVITATION_OVER_H_BAR_C;/**< (GeV/c^2)^-2 */
ADD_IMPORT extern const double U_NEWTONIAN_CONSTANT_OF_GRAVITATION_OVER_H_BAR_C;/**< (GeV/c^2)^-2 */
ADD_IMPORT extern const double NUCLEAR_MAGNETON;/**< J T^-1 */
ADD_IMPORT extern const double U_NUCLEAR_MAGNETON;/**< J T^-1 */
ADD_IMPORT extern const double NUCLEAR_MAGNETON_IN_EV_T;/**< eV T^-1 */
ADD_IMPORT extern const double U_NUCLEAR_MAGNETON_IN_EV_T;/**< eV T^-1 */
ADD_IMPORT extern const double NUCLEAR_MAGNETON_IN_INVERSE_METER_PER_TESLA;/**< m^-1 T^-1 */
ADD_IMPORT extern const double U_NUCLEAR_MAGNETON_IN_INVERSE_METER_PER_TESLA;/**< m^-1 T^-1 */
ADD_IMPORT extern const double NUCLEAR_MAGNETON_IN_K_T;/**< K T^-1 */
ADD_IMPORT extern const double U_NUCLEAR_MAGNETON_IN_K_T;/**< K T^-1 */
ADD_IMPORT extern const double NUCLEAR_MAGNETON_IN_MHZ_T;/**< MHz T^-1 */
ADD_IMPORT extern const double U_NUCLEAR_MAGNETON_IN_MHZ_T;/**< MHz T^-1 */
ADD_IMPORT extern const double PLANCK_CONSTANT;/**< J Hz^-1 */
ADD_IMPORT extern const double U_PLANCK_CONSTANT;/**< J Hz^-1 */
ADD_IMPORT extern const double PLANCK_CONSTANT_IN_EV_HZ;/**< eV Hz^-1 */
ADD_IMPORT extern const double U_PLANCK_CONSTANT_IN_EV_HZ;/**< eV Hz^-1 */
ADD_IMPORT extern const double PLANCK_LENGTH;/**< m */
ADD_IMPORT extern const double U_PLANCK_LENGTH;/**< m */
ADD_IMPORT extern const double PLANCK_MASS;/**< kg */
ADD_IMPORT extern const double U_PLANCK_MASS;/**< kg */
ADD_IMPORT extern const double PLANCK_MASS_ENERGY_EQUIVALENT_IN_GEV;/**< GeV */
ADD_IMPORT extern const double U_PLANCK_MASS_ENERGY_EQUIVALENT_IN_GEV;/**< GeV */