src/codata_.f90


real(c_double), protected, bind(C,name="MUON_MASS_ENERGY_EQUIVALENT") :: &
MUON_MASS_ENERGY_EQUIVALENT= !! 
real(c_double), protected, bind(C,name="U_MUON_MASS_ENERGY_EQUIVALENT") :: &
U_MUON_MASS_ENERGY_EQUIVALENT= !! 

real(c_double), protected, bind(C,name="MUON_MASS_ENERGY_EQUIVALENT_IN_MEV") :: &
MUON_MASS_ENERGY_EQUIVALENT_IN_MEV= !! 
real(c_double), protected, bind(C,name="U_MUON_MASS_ENERGY_EQUIVALENT_IN_MEV") :: &
U_MUON_MASS_ENERGY_EQUIVALENT_IN_MEV= !! 

real(c_double), protected, bind(C,name="MUON_MASS_IN_U") :: &
MUON_MASS_IN_U= !! 
real(c_double), protected, bind(C,name="U_MUON_MASS_IN_U") :: &
U_MUON_MASS_IN_U= !! 

real(c_double), protected, bind(C,name="MUON_MOLAR_MASS") :: &
MUON_MOLAR_MASS= !! 
real(c_double), protected, bind(C,name="U_MUON_MOLAR_MASS") :: &
U_MUON_MOLAR_MASS= !! 

real(c_double), protected, bind(C,name="MUON_NEUTRON_MASS_RATIO") :: &
MUON_NEUTRON_MASS_RATIO= !! 
real(c_double), protected, bind(C,name="U_MUON_NEUTRON_MASS_RATIO") :: &
U_MUON_NEUTRON_MASS_RATIO= !! 

real(c_double), protected, bind(C,name="MUON_PROTON_MAG__MOM__RATIO") :: &
MUON_PROTON_MAG__MOM__RATIO= !! 
real(c_double), protected, bind(C,name="U_MUON_PROTON_MAG__MOM__RATIO") :: &
U_MUON_PROTON_MAG__MOM__RATIO= !! 

real(c_double), protected, bind(C,name="MUON_PROTON_MASS_RATIO") :: &
MUON_PROTON_MASS_RATIO= !! 
real(c_double), protected, bind(C,name="U_MUON_PROTON_MASS_RATIO") :: &
U_MUON_PROTON_MASS_RATIO= !! 

real(c_double), protected, bind(C,name="MUON_TAU_MASS_RATIO") :: &
MUON_TAU_MASS_RATIO= !! 
real(c_double), protected, bind(C,name="U_MUON_TAU_MASS_RATIO") :: &
U_MUON_TAU_MASS_RATIO= !! 

real(c_double), protected, bind(C,name="NATURAL_UNIT_OF_ACTION") :: &
NATURAL_UNIT_OF_ACTION= !! 
real(c_double), protected, bind(C,name="U_NATURAL_UNIT_OF_ACTION") :: &
U_NATURAL_UNIT_OF_ACTION= !! 

real(c_double), protected, bind(C,name="NATURAL_UNIT_OF_ACTION_IN_EV_S") :: &
NATURAL_UNIT_OF_ACTION_IN_EV_S= !! 
real(c_double), protected, bind(C,name="U_NATURAL_UNIT_OF_ACTION_IN_EV_S") :: &
U_NATURAL_UNIT_OF_ACTION_IN_EV_S= !! 

real(c_double), protected, bind(C,name="NATURAL_UNIT_OF_ENERGY") :: &
NATURAL_UNIT_OF_ENERGY= !! 
real(c_double), protected, bind(C,name="U_NATURAL_UNIT_OF_ENERGY") :: &
U_NATURAL_UNIT_OF_ENERGY= !! 

real(c_double), protected, bind(C,name="NATURAL_UNIT_OF_ENERGY_IN_MEV") :: &
NATURAL_UNIT_OF_ENERGY_IN_MEV= !! 
real(c_double), protected, bind(C,name="U_NATURAL_UNIT_OF_ENERGY_IN_MEV") :: &
U_NATURAL_UNIT_OF_ENERGY_IN_MEV= !! 

real(c_double), protected, bind(C,name="NATURAL_UNIT_OF_LENGTH") :: &
NATURAL_UNIT_OF_LENGTH= !! 
real(c_double), protected, bind(C,name="U_NATURAL_UNIT_OF_LENGTH") :: &
U_NATURAL_UNIT_OF_LENGTH= !! 

real(c_double), protected, bind(C,name="NATURAL_UNIT_OF_MASS") :: &
NATURAL_UNIT_OF_MASS= !! 
real(c_double), protected, bind(C,name="U_NATURAL_UNIT_OF_MASS") :: &
U_NATURAL_UNIT_OF_MASS= !! 

real(c_double), protected, bind(C,name="NATURAL_UNIT_OF_MOMENTUM") :: &
NATURAL_UNIT_OF_MOMENTUM= !! 
real(c_double), protected, bind(C,name="U_NATURAL_UNIT_OF_MOMENTUM") :: &
U_NATURAL_UNIT_OF_MOMENTUM= !! 

real(c_double), protected, bind(C,name="NATURAL_UNIT_OF_MOMENTUM_IN_MEV_C") :: &
NATURAL_UNIT_OF_MOMENTUM_IN_MEV_C= !! 
real(c_double), protected, bind(C,name="U_NATURAL_UNIT_OF_MOMENTUM_IN_MEV_C") :: &
U_NATURAL_UNIT_OF_MOMENTUM_IN_MEV_C= !! 

real(c_double), protected, bind(C,name="NATURAL_UNIT_OF_TIME") :: &
NATURAL_UNIT_OF_TIME= !! 
real(c_double), protected, bind(C,name="U_NATURAL_UNIT_OF_TIME") :: &
U_NATURAL_UNIT_OF_TIME= !! 

real(c_double), protected, bind(C,name="NATURAL_UNIT_OF_VELOCITY") :: &
NATURAL_UNIT_OF_VELOCITY= !! 
real(c_double), protected, bind(C,name="U_NATURAL_UNIT_OF_VELOCITY") :: &
U_NATURAL_UNIT_OF_VELOCITY= !! 

real(c_double), protected, bind(C,name="NEUTRON_COMPTON_WAVELENGTH") :: &
NEUTRON_COMPTON_WAVELENGTH= !! 
real(c_double), protected, bind(C,name="U_NEUTRON_COMPTON_WAVELENGTH") :: &
U_NEUTRON_COMPTON_WAVELENGTH= !! 

real(c_double), protected, bind(C,name="NEUTRON_ELECTRON_MAG__MOM__RATIO") :: &
NEUTRON_ELECTRON_MAG__MOM__RATIO= !! 
real(c_double), protected, bind(C,name="U_NEUTRON_ELECTRON_MAG__MOM__RATIO") :: &
U_NEUTRON_ELECTRON_MAG__MOM__RATIO= !! 

real(c_double), protected, bind(C,name="NEUTRON_ELECTRON_MASS_RATIO") :: &
NEUTRON_ELECTRON_MASS_RATIO= !! 
real(c_double), protected, bind(C,name="U_NEUTRON_ELECTRON_MASS_RATIO") :: &
U_NEUTRON_ELECTRON_MASS_RATIO= !! 

real(c_double), protected, bind(C,name="NEUTRON_G_FACTOR") :: &
NEUTRON_G_FACTOR= !! 
real(c_double), protected, bind(C,name="U_NEUTRON_G_FACTOR") :: &
U_NEUTRON_G_FACTOR= !! 

real(c_double), protected, bind(C,name="NEUTRON_GYROMAG__RATIO") :: &
NEUTRON_GYROMAG__RATIO= !! 
real(c_double), protected, bind(C,name="U_NEUTRON_GYROMAG__RATIO") :: &
U_NEUTRON_GYROMAG__RATIO= !! 

real(c_double), protected, bind(C,name="NEUTRON_GYROMAG__RATIO_IN_MHZ_T") :: &
NEUTRON_GYROMAG__RATIO_IN_MHZ_T= !! 
real(c_double), protected, bind(C,name="U_NEUTRON_GYROMAG__RATIO_IN_MHZ_T") :: &
U_NEUTRON_GYROMAG__RATIO_IN_MHZ_T= !! 

real(c_double), protected, bind(C,name="NEUTRON_MAG__MOM") :: &
NEUTRON_MAG__MOM= !! 
real(c_double), protected, bind(C,name="U_NEUTRON_MAG__MOM") :: &
U_NEUTRON_MAG__MOM= !! 

real(c_double), protected, bind(C,name="NEUTRON_MAG__MOM__TO_BOHR_MAGNETON_RATIO") :: &
NEUTRON_MAG__MOM__TO_BOHR_MAGNETON_RATIO= !! 
real(c_double), protected, bind(C,name="U_NEUTRON_MAG__MOM__TO_BOHR_MAGNETON_RATIO") :: &
U_NEUTRON_MAG__MOM__TO_BOHR_MAGNETON_RATIO= !! 

real(c_double), protected, bind(C,name="NEUTRON_MAG__MOM__TO_NUCLEAR_MAGNETON_RATIO") :: &
NEUTRON_MAG__MOM__TO_NUCLEAR_MAGNETON_RATIO= !! 
real(c_double), protected, bind(C,name="U_NEUTRON_MAG__MOM__TO_NUCLEAR_MAGNETON_RATIO") :: &
U_NEUTRON_MAG__MOM__TO_NUCLEAR_MAGNETON_RATIO= !! 

real(c_double), protected, bind(C,name="NEUTRON_MASS") :: &
NEUTRON_MASS= !! 
real(c_double), protected, bind(C,name="U_NEUTRON_MASS") :: &
U_NEUTRON_MASS= !! 

real(c_double), protected, bind(C,name="NEUTRON_MASS_ENERGY_EQUIVALENT") :: &
NEUTRON_MASS_ENERGY_EQUIVALENT= !! 
real(c_double), protected, bind(C,name="U_NEUTRON_MASS_ENERGY_EQUIVALENT") :: &
U_NEUTRON_MASS_ENERGY_EQUIVALENT= !! 

real(c_double), protected, bind(C,name="NEUTRON_MASS_ENERGY_EQUIVALENT_IN_MEV") :: &
NEUTRON_MASS_ENERGY_EQUIVALENT_IN_MEV= !! 
real(c_double), protected, bind(C,name="U_NEUTRON_MASS_ENERGY_EQUIVALENT_IN_MEV") :: &
U_NEUTRON_MASS_ENERGY_EQUIVALENT_IN_MEV= !! 

real(c_double), protected, bind(C,name="NEUTRON_MASS_IN_U") :: &
NEUTRON_MASS_IN_U= !! 
real(c_double), protected, bind(C,name="U_NEUTRON_MASS_IN_U") :: &
U_NEUTRON_MASS_IN_U= !! 

real(c_double), protected, bind(C,name="NEUTRON_MOLAR_MASS") :: &
NEUTRON_MOLAR_MASS= !! 
real(c_double), protected, bind(C,name="U_NEUTRON_MOLAR_MASS") :: &
U_NEUTRON_MOLAR_MASS= !! 

real(c_double), protected, bind(C,name="NEUTRON_MUON_MASS_RATIO") :: &
NEUTRON_MUON_MASS_RATIO= !! 
real(c_double), protected, bind(C,name="U_NEUTRON_MUON_MASS_RATIO") :: &
U_NEUTRON_MUON_MASS_RATIO= !! 

real(c_double), protected, bind(C,name="NEUTRON_PROTON_MAG__MOM__RATIO") :: &
NEUTRON_PROTON_MAG__MOM__RATIO= !! 
real(c_double), protected, bind(C,name="U_NEUTRON_PROTON_MAG__MOM__RATIO") :: &
U_NEUTRON_PROTON_MAG__MOM__RATIO= !! 

real(c_double), protected, bind(C,name="NEUTRON_PROTON_MASS_DIFFERENCE") :: &
NEUTRON_PROTON_MASS_DIFFERENCE= !! 
real(c_double), protected, bind(C,name="U_NEUTRON_PROTON_MASS_DIFFERENCE") :: &
U_NEUTRON_PROTON_MASS_DIFFERENCE= !! 

real(c_double), protected, bind(C,name="NEUTRON_PROTON_MASS_DIFFERENCE_ENERGY_EQUIVALENT") :: &
NEUTRON_PROTON_MASS_DIFFERENCE_ENERGY_EQUIVALENT= !! 
real(c_double), protected, bind(C,name="U_NEUTRON_PROTON_MASS_DIFFERENCE_ENERGY_EQUIVALENT") :: &
U_NEUTRON_PROTON_MASS_DIFFERENCE_ENERGY_EQUIVALENT= !! 

real(c_double), protected, bind(C,name="NEUTRON_PROTON_MASS_DIFFERENCE_ENERGY_EQUIVALENT_IN_MEV") :: &
NEUTRON_PROTON_MASS_DIFFERENCE_ENERGY_EQUIVALENT_IN_MEV= !! 
real(c_double), protected, bind(C,name="U_NEUTRON_PROTON_MASS_DIFFERENCE_ENERGY_EQUIVALENT_IN_MEV") :: &
U_NEUTRON_PROTON_MASS_DIFFERENCE_ENERGY_EQUIVALENT_IN_MEV= !! 

real(c_double), protected, bind(C,name="NEUTRON_PROTON_MASS_DIFFERENCE_IN_U") :: &
NEUTRON_PROTON_MASS_DIFFERENCE_IN_U= !! 
real(c_double), protected, bind(C,name="U_NEUTRON_PROTON_MASS_DIFFERENCE_IN_U") :: &
U_NEUTRON_PROTON_MASS_DIFFERENCE_IN_U= !! 

real(c_double), protected, bind(C,name="NEUTRON_PROTON_MASS_RATIO") :: &
NEUTRON_PROTON_MASS_RATIO= !! 
real(c_double), protected, bind(C,name="U_NEUTRON_PROTON_MASS_RATIO") :: &
U_NEUTRON_PROTON_MASS_RATIO= !! 

real(c_double), protected, bind(C,name="NEUTRON_RELATIVE_ATOMIC_MASS") :: &
NEUTRON_RELATIVE_ATOMIC_MASS= !! 
real(c_double), protected, bind(C,name="U_NEUTRON_RELATIVE_ATOMIC_MASS") :: &
U_NEUTRON_RELATIVE_ATOMIC_MASS= !! 

real(c_double), protected, bind(C,name="NEUTRON_TAU_MASS_RATIO") :: &
NEUTRON_TAU_MASS_RATIO= !! 
real(c_double), protected, bind(C,name="U_NEUTRON_TAU_MASS_RATIO") :: &
U_NEUTRON_TAU_MASS_RATIO= !! 

real(c_double), protected, bind(C,name="NEUTRON_TO_SHIELDED_PROTON_MAG__MOM__RATIO") :: &
NEUTRON_TO_SHIELDED_PROTON_MAG__MOM__RATIO= !! 
real(c_double), protected, bind(C,name="U_NEUTRON_TO_SHIELDED_PROTON_MAG__MOM__RATIO") :: &
U_NEUTRON_TO_SHIELDED_PROTON_MAG__MOM__RATIO= !! 

real(c_double), protected, bind(C,name="NEWTONIAN_CONSTANT_OF_GRAVITATION") :: &
NEWTONIAN_CONSTANT_OF_GRAVITATION= !! 
real(c_double), protected, bind(C,name="U_NEWTONIAN_CONSTANT_OF_GRAVITATION") :: &
U_NEWTONIAN_CONSTANT_OF_GRAVITATION= !! 

real(c_double), protected, bind(C,name="NEWTONIAN_CONSTANT_OF_GRAVITATION_OVER_H_BAR_C") :: &
NEWTONIAN_CONSTANT_OF_GRAVITATION_OVER_H_BAR_C= !! 
real(c_double), protected, bind(C,name="U_NEWTONIAN_CONSTANT_OF_GRAVITATION_OVER_H_BAR_C") :: &
U_NEWTONIAN_CONSTANT_OF_GRAVITATION_OVER_H_BAR_C= !! 

real(c_double), protected, bind(C,name="NUCLEAR_MAGNETON") :: &
NUCLEAR_MAGNETON= !! 
real(c_double), protected, bind(C,name="U_NUCLEAR_MAGNETON") :: &
U_NUCLEAR_MAGNETON= !! 

real(c_double), protected, bind(C,name="NUCLEAR_MAGNETON_IN_EV_T") :: &
NUCLEAR_MAGNETON_IN_EV_T= !! 
real(c_double), protected, bind(C,name="U_NUCLEAR_MAGNETON_IN_EV_T") :: &
U_NUCLEAR_MAGNETON_IN_EV_T= !! 

real(c_double), protected, bind(C,name="NUCLEAR_MAGNETON_IN_INVERSE_METER_PER_TESLA") :: &
NUCLEAR_MAGNETON_IN_INVERSE_METER_PER_TESLA= !! 
real(c_double), protected, bind(C,name="U_NUCLEAR_MAGNETON_IN_INVERSE_METER_PER_TESLA") :: &
U_NUCLEAR_MAGNETON_IN_INVERSE_METER_PER_TESLA= !! 

real(c_double), protected, bind(C,name="NUCLEAR_MAGNETON_IN_K_T") :: &
NUCLEAR_MAGNETON_IN_K_T= !! 
real(c_double), protected, bind(C,name="U_NUCLEAR_MAGNETON_IN_K_T") :: &
U_NUCLEAR_MAGNETON_IN_K_T= !! 

real(c_double), protected, bind(C,name="NUCLEAR_MAGNETON_IN_MHZ_T") :: &
NUCLEAR_MAGNETON_IN_MHZ_T= !! 
real(c_double), protected, bind(C,name="U_NUCLEAR_MAGNETON_IN_MHZ_T") :: &
U_NUCLEAR_MAGNETON_IN_MHZ_T= !! 

real(c_double), protected, bind(C,name="PLANCK_CONSTANT") :: &
PLANCK_CONSTANT= !! 
real(c_double), protected, bind(C,name="U_PLANCK_CONSTANT") :: &
U_PLANCK_CONSTANT= !! 

real(c_double), protected, bind(C,name="PLANCK_CONSTANT_IN_EV_HZ") :: &
PLANCK_CONSTANT_IN_EV_HZ= !! 
real(c_double), protected, bind(C,name="U_PLANCK_CONSTANT_IN_EV_HZ") :: &
U_PLANCK_CONSTANT_IN_EV_HZ= !! 

real(c_double), protected, bind(C,name="PLANCK_LENGTH") :: &
PLANCK_LENGTH= !! 
real(c_double), protected, bind(C,name="U_PLANCK_LENGTH") :: &
U_PLANCK_LENGTH= !! 

real(c_double), protected, bind(C,name="PLANCK_MASS") :: &
PLANCK_MASS= !! 
real(c_double), protected, bind(C,name="U_PLANCK_MASS") :: &
U_PLANCK_MASS= !! 

real(c_double), protected, bind(C,name="PLANCK_MASS_ENERGY_EQUIVALENT_IN_GEV") :: &
PLANCK_MASS_ENERGY_EQUIVALENT_IN_GEV= !! 
real(c_double), protected, bind(C,name="U_PLANCK_MASS_ENERGY_EQUIVALENT_IN_GEV") :: &
U_PLANCK_MASS_ENERGY_EQUIVALENT_IN_GEV= !! 
